--- a/Blog/templates/frontend/registro.html
+++ b/Blog/templates/frontend/registro.html
@@ -7,11 +7,11 @@
         {% csrf_token %}
         <div class="divcadform">
             <label for="username">Username:</label>
-            <input id="username" name="username" type="text" class="forminput">
+            <input id="username" name="username" type="text" class="forminput" value="{{dados.username}}">
         </div>
         <div class="divcadform">
             <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" class="forminput">
+            <input type="email" id="email" name="email" class="forminput" value="{{dados.email}}">
         </div>
         <div class="divcadform">
             <label for="password">Senha:</label>
