--- a/Blog/templates/base.html
+++ b/Blog/templates/base.html
@@ -27,8 +27,8 @@
         </div>
         <div>
             <nav>
-                <img src="{% static 'img/blogIcons/menu.png' %}" alt="menu">
-                <ul>
+                <img id="iconemenu" src="{% static 'img/blogIcons/menu.png' %}" alt="menu">
+                <ul id="ulmenu">
                     <li><a href="/">Home</a></li>
                     <li><a href="/sobre">Sobre</a></li>
                 </ul>
@@ -42,5 +42,6 @@
     <footer>
         <p>@ Aelson Carvalho</p>
     </footer>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
